style.css
@import url('https://fonts.googleapis.com/css2?family=Elsie:wght@900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');

body {
  text-align: center;
  font-size: 'Source Sans Pro', sans-serif;
}

#demo{
background: rgb(26,49,66);
background: radial-gradient(circle, rgba(26,49,66,1) 64%, rgba(210,191,183,1) 100%);;
}

h1  {
  font-family: 'Elsie', cursive;
  color: rgb(210, 191, 183);
  /* // font-size:
  // line-height: */
}

a {
  color: #f3edeb;
  text-decoration: none;
}

a:hover {
  color: rgb(210, 191, 183)
}

.card {
  border: 10px;
  border-radius: 5px;
  background: rgb(26, 49, 66);
  color: rgb(210, 191, 183);
}

.card p {
  color: #f3edeb;
}

.card-projects {
  border: 10px;
  border-radius: 5px;
  background: rgb(26, 49, 66);
  color: rgb(210, 191, 183);
  text-align: center;
}

.card-projects p {
  color: #f3edeb;
}
.card img {
  width: 150px;
  background-color: rgb(26, 49, 66);
}

.footer {
  /* background-color: rgb(210, 191, 183); */
  color:  rgb(26, 49, 66);
}

.inline {
  List-style: none;
  text-align: center;
  padding-left: 0px;
  color: rgb(26, 49, 66);
  font-size: 30px;
}

#logo {
  color:rgb(26, 49, 66);
  background-color: rgb(26, 49, 66);
}

.inline li {
  display: inline-block;
  padding: 0px 20px;
}

.img-circle {
  border-radius: 25%;
}

.class fab fa-linkedin {
  width: 50px;
}

.container {
  width: 600px;   /* This sets the width */
  height: 800px;
  border-radius: 5%;
  margin: 0 auto; /* This automatically sets left/right margins */
  background-color: rgb(26, 49, 66);
  color: rgb(210, 191, 183);
}

@media (max-width: 960px) {
  /* For a screen < 960px, this CSS will be read */
  .container {
    width: 700px;
  }
}
@media (max-width: 720px) {
  /* For a screen < 720px, this CSS will be read */
  .container {
    width: 500px;
  }
}
@media (max-width: 540px) {
  /* For a screen < 540px, this CSS will be read */
  .container {
    width: 300px;
  }
}

